a1/brendan_gordon/TEST_PROGRAMS/invalidtype/justin_domingue/invalidtype-4.min
# Invalid 4
# Use undeclared variable
var y: int;
var z: string;
var h: float;

x=1;

